--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     
-    <h1></h1>
+    <h1 id="numbers-container"></h1>
+    <h2 id="result"></h2>
 
     <script src="js/script.js"></script>
 </body>
